--- a/src/main/resources/templates/guestbook/list.html
+++ b/src/main/resources/templates/guestbook/list.html
@@ -4,7 +4,13 @@
 
     <th:block th:fragment="content">
 
-        <h1 class="mt-4">GuestBook List Page</h1>
+        <h1 class="mt-4">GuestBook List Page
+            <span>
+                <a th:href="@{/guestbook/register}">
+                    <button type="button" class="btn btn-outline-primary">게시글 등록하기</button>
+                </a>
+            </span>
+        </h1>
 
         <table class="table table-striped">
             <thead>
@@ -42,6 +48,36 @@
             </li>
         </ul>
 
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">안내 창</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>안내 메세지</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script th:inline="javascript">
+
+            var msg = [[${msg}]];
+
+            if(msg){
+                $(".modal").modal();
+            }
+
+        </script>
 
     </th:block>
 </th:block>
+</html>
