--- a/src/main/resources/templates/movie/register.html
+++ b/src/main/resources/templates/movie/register.html
@@ -25,38 +25,38 @@
 
       </div>
 
-<!--      <style>-->
-<!--                .uploadResult {-->
-<!--                    width: 100%;-->
-<!--                    background-color: gray;-->
-<!--                    margin-top: 10px;-->
-<!--                }-->
+      <style>
+                .uploadResult {
+                    width: 100%;
+                    background-color: gray;
+                    margin-top: 10px;
+                }
 
-<!--                .uploadResult ul {-->
-<!--                    display: flex;-->
-<!--                    flex-flow: row;-->
-<!--                    justify-content: center;-->
-<!--                    align-items: center;-->
-<!--                    vertical-align: top;-->
-<!--                    overflow: auto;-->
-<!--                }-->
+                .uploadResult ul {
+                    display: flex;
+                    flex-flow: row;
+                    justify-content: center;
+                    align-items: center;
+                    vertical-align: top;
+                    overflow: auto;
+                }
 
-<!--                .uploadResult ul li {-->
-<!--                    list-style: none;-->
-<!--                    padding: 10px;-->
-<!--                    margin-left: 2em;-->
-<!--                }-->
+                .uploadResult ul li {
+                    list-style: none;
+                    padding: 10px;
+                    margin-left: 2em;
+                }
 
-<!--                .uploadResult ul li img {-->
-<!--                    width: 100px;-->
-<!--                }-->
-<!--            </style>-->
+                .uploadResult ul li img {
+                    width: 100px;
+                }
+            </style>
 
-<!--      <div class="uploadResult">-->
-<!--        <ul>-->
+      <div class="uploadResult">
+        <ul>
 
-<!--        </ul>-->
-<!--      </div>-->
+        </ul>
+      </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
